--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 3.3.5
+current_version = 0.0.0
 commit = True
 tag = True
 
@@ -7,7 +7,7 @@ tag = True
 search = {current_version}
 replace = {new_version}
 
-[bumpversion:file:aicsimageio/__init__.py]
+[bumpversion:file:napari_aicssegmentation/__init__.py]
 search = {current_version}
 replace = {new_version}
 
@@ -17,7 +17,6 @@ universal = 1
 [flake8]
 exclude =
 	docs/
-	aicsimageio/vendor/
 ignore =
 	E203
 	W291
