--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -3,17 +3,7 @@
 
 name: tests
 
-on: 
-  push:
-    branches:
-      - master
-      - main
-    tags:
-      - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
-  pull_request:
-    branches:
-      - master
-      - main
+on: [push, pull_request]
   workflow_dispatch:
 
 jobs:
