--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -56,28 +56,20 @@ jobs:
       - name: Coverage
         uses: codecov/codecov-action@v1
 
-  deploy:
-    # this will run when you have tagged a commit, starting with "v*"
-    # and requires that you have put your twine API key in your 
-    # github secrets (see readme for details)
-    needs: [test]
+  lint:
     runs-on: ubuntu-latest
-    if: contains(github.ref, 'tags')
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v1
         with:
-          python-version: "3.x"
-      - name: Install dependencies
+          python-version: 3.9
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -U setuptools setuptools_scm wheel twine
-      - name: Build and publish
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.TWINE_API_KEY }}
+          pip install .[test]
+      - name: Lint with flake8
         run: |
-          git tag
-          python setup.py sdist bdist_wheel
-          twine upload dist/*
+          flake8 napari_aicssegmentation --count --verbose --show-source --statistics
+          black --check --exclude vendor napari_aicssegmentation
