--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ coverage.xml
 *,cover
 .hypothesis/
 .napari_cache
+.pytest_cache
 
 # Translations
 *.mo
@@ -80,3 +81,4 @@ target/
 
 # IDE files
 .idea/
+.vscode
