more unit tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,3 +31,8 @@ collect_ignore = ['setup.py']
 filterwarnings =
 	ignore::UserWarning
 	ignore::FutureWarning
+
+[coverage:run]
+omit = 
+	*/_tests/*
+	**/__init__.py
