--- a/setup.cfg
+++ b/setup.cfg
@@ -17,11 +17,14 @@ universal = 1
 [flake8]
 exclude =
 	docs/
+	*/_tests/*
 ignore =
 	E203
 	W291
 	W503
-max-line-length = 88
+	W293
+	E261
+max-line-length = 120
 
 [aliases]
 test = pytest
