--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,3 +6,4 @@ recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
 recursive-include napari_aicssegmentation/style *.qss
+recursive-include napari_aicssegmentation/assets/icons *
