fix cv2 -> opencv-python

--- a/tox.ini
+++ b/tox.ini
@@ -33,5 +33,5 @@ deps =
     # you can remove these if you don't use them
     qtpy
     pyqt5
-    cv2
+    opencv-python
 commands = pytest -v --color=yes --cov=napari_aicssegmentation --cov-report=xml
