Feature/workflow selection (#62)
* now shows all available workflows

* first iteration of state management for workflow selection

* start workflowthumbnails widget

* work in progress- stuck with pyqt widgets

* moving button creationg to workflow_thumbnails.py

* working widget- work in progress

* everything works, need to comment and clean up code

* Working version of workflow thumbnails

* fix formatting for all files touched

* format workflow select view

* adding cv2 to tox.ini and setup.py

* fix cv2 -> opencv-python

* small fixes

* use opencv headless

* use opencv headless

* Lint and format

* fix tests

* lint

* add workflow engine to all controllers

* lint

* Add step 3 labels inside WorkflowThumbnails class

* Make enable-disable of labels functional

* Remove commented out code

* Disable buttons when unselecting a layer

* Lint and format

* Move setLayout back into load_workflows

Co-authored-by: Sylvain Slaton <sylvain.slaton@.alleninstitute.org>
Co-authored-by: Na Hyung Choi <schoinh@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -33,4 +33,5 @@ deps =
     # you can remove these if you don't use them
     qtpy
     pyqt5
+    opencv-python-headless
 commands = pytest -v --color=yes --cov=napari_aicssegmentation --cov-report=xml
