--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,11 @@ line-length = 120
 [build-system]
 requires = [
     "setuptools>=42",
-    "wheel"
+    "wheel",
+    "pytest-runner"
 ]
+
+[tool.setuptools_scm]
+write_to = "napari_allencell_segmenter/_version.py"
+
 build-backend = "setuptools.build_meta"
