--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish
 on:
   push:
     branches:
-      - stable
+      - release
 
 jobs:
   publish:
@@ -24,5 +24,5 @@ jobs:
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
-          user: aicspypi
+          user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
