--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,11 @@
 [bumpversion]
-current_version = 1.1.4
+current_version = 2.0.0-dev0
 commit = True
 tag = True
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
+serialize = 
+	{major}.{minor}.{patch}-{release}{build}
+	{major}.{minor}.{patch}
 
 [bumpversion:file:setup.py]
 search = {current_version}
@@ -10,6 +14,13 @@ replace = {new_version}
 [bumpversion:file:napari_allencell_segmenter/__init__.py]
 search = {current_version}
 replace = {new_version}
+
+[bumpversion:part:release]
+optional_value = prod
+first_value = dev
+values = 
+	dev
+	prod
 
 [bdist_wheel]
 universal = 1
