add napari manifest entry in package metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,3 +50,12 @@ filterwarnings =
 omit = 
 	*/_tests/*
 	**/__init__.py
+
+# tell napari where to find to your manifest
+[options.entry_points]
+napari.manifest =
+    example-plugin = napari_allencell_segmenter:napari.yaml
+
+# make sure it gets included in your package
+[options.package_data]
+example-plugin = napari.yaml
