working rough draft

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,16 @@ omit =
 	*/_tests/*
 	**/__init__.py
 
+[metadata]
+name = napari-napari_allencell_segmenter
+classifiers =
+    Framework :: napari
+
+[options]
+packages = find:
+install_requires =
+    napari
+
 # tell napari where to find to your manifest
 [options.entry_points]
 napari.manifest =
