clean up code + comment setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,21 +51,23 @@ omit =
 	*/_tests/*
 	**/__init__.py
 
+# napari needs the following metadata and options to find the plugin.
 [metadata]
 name = napari-napari_allencell_segmenter
 classifiers =
     Framework :: napari
 
+# package options
 [options]
 packages = find:
 install_requires =
     napari
 
-# tell napari where to find to your manifest
+# tell napari where to find to the manifest
 [options.entry_points]
 napari.manifest =
     example-plugin = napari_allencell_segmenter:napari.yaml
 
-# make sure it gets included in your package
+# include manifest in package data
 [options.package_data]
 example-plugin = napari.yaml
