--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 2.1.11
+current_version = 2.1.12-dev0
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
@@ -51,11 +51,9 @@ omit =
 	*/_tests/*
 	**/__init__.py
 
-# tell napari where to find to your manifest
 [options.entry_points]
-napari.manifest =
-    example-plugin = napari_allencell_segmenter:napari.yaml
+napari.manifest = 
+	example-plugin = napari_allencell_segmenter:napari.yaml
 
-# make sure it gets included in your package
 [options.package_data]
 example-plugin = napari.yaml
