--- a/tox.ini
+++ b/tox.ini
@@ -35,4 +35,5 @@ deps =
     qtpy
     pyqt5
     opencv-python-headless
+    scikit-build
 commands = pytest -v --color=yes --cov=napari_allencell_segmenter --cov-report=xml
