without itkwidgets not needed for ci

--- a/tox.ini
+++ b/tox.ini
@@ -36,4 +36,6 @@ deps =
     pyqt5
     opencv-python-headless
     scikit-build
+    itkwidgets==0
+
 commands = pytest -v --color=yes --cov=napari_allencell_segmenter --cov-report=xml
