--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,8 @@
 [tox]
 envlist = py{37,38,39}-{linux,macos,windows}
 
+install_command = python -m pip install --only-binary itkwidgets --prefer-binary {opts} {packages}
+
 [gh-actions]
 python =
     3.7: py37
@@ -36,6 +38,5 @@ deps =
     pyqt5
     opencv-python-headless
     scikit-build
-    itkwidgets==0
 
 commands = pytest -v --color=yes --cov=napari_allencell_segmenter --cov-report=xml
