--- a/tox.ini
+++ b/tox.ini
@@ -38,5 +38,6 @@ deps =
     scikit-build
     itk-core>=5.2.1.post1,<5.3
     itkwidgets==0.27.0
+    itk-meshtopolydata==0.9.0
 
 commands = pytest -v --color=yes --cov=napari_allencell_segmenter --cov-report=xml
