--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ deps =
     pyqt5
     opencv-python-headless
     scikit-build
-    itk-core>=5.2.1.post1,<5.3
+    itk-core>=5.3
     itkwidgets==0.27.0
     itk-meshtopolydata==0.9.0
 
