--- a/tox.ini
+++ b/tox.ini
@@ -36,8 +36,8 @@ deps =
     pyqt5
     opencv-python-headless
     scikit-build
-    itk-core>=5.3
+    itk-core>=5.3,<5.4
     itkwidgets==0.27.0
-    itk-meshtopolydata==0.9.0
+    itk-meshtopolydata==0.10.0
 
 commands = pytest -v --color=yes --cov=napari_allencell_segmenter --cov-report=xml
