--- a/tox.ini
+++ b/tox.ini
@@ -37,5 +37,6 @@ deps =
     itk-core>=5.3,<5.4
     itkwidgets==0.27.0
     itk-meshtopolydata==0.10.0
+    pydantic==1.10.12
 
 commands = pytest -v --color=yes --cov=napari_allencell_segmenter --cov-report=xml
