--- a/napari_allencell_segmenter/napari.yaml
+++ b/napari_allencell_segmenter/napari.yaml
@@ -1,7 +1,5 @@
 name: napari-allencell-segmenter
 display_name: Allen Cell Segmenter
-metadata_version: "2.2"
-
 contributions:
   commands:
     - id: napari-allencell-segmenter.workflow_editor
@@ -11,7 +9,9 @@ contributions:
     - id: napari-allencell-segmenter.batch_processing
       title: Batch processing
       python_name: napari_allencell_segmenter._plugin:BatchProcessingWidget
-
+  readers:
+  writers:
+  sample_data:
   widgets:
     - command: napari-allencell-segmenter.workflow_editor
       display_name: Workflow editor
