--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,24 +5,35 @@ on:
     branches:
       - release
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   publish:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.9
-      - name: Install Dependencies
+          python-version: "3.9"
+
+      - name: Install build backend
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel
-      - name: Build Package
-        run: |
-          python setup.py sdist bdist_wheel
+          pip install build
+
+      - name: Build package
+        run: python -m build
+
+      - name: List built artifacts
+        run: ls -l dist
+
       - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
